# Find_the_ELF

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: CONSTANTS.h  dualListDecoder.h  dualListMap.h  feedForwardTrellis.h  minHeap.h  stopWatch.h  trialListDecoder.h  viterbiCodec.h
src/: crc.cpp  crc.h  dualListDecoder.cpp  dualListDecoder_BAM.cpp  dualListMap.cpp  feedForwardTrellis.cpp  feedForwardTrellis.h  listDecoder.cpp  main.cpp  minHeap.cpp  minMaxHeap.cpp  minMaxHeap.h  puncturedDualListDecoder.cpp  stopWatch.cpp  trialListDecoder.cpp  viterbiCodec.cpp  viterbiCodec.h  zTListDecoder.cpp
test/: decoder_test  feedforwardtrellis.sh  feedforwardtrellis_test.cpp  minheap.sh  minheap_test.cpp  viterbiCodec.sh  viterbiCodec_test.cpp
test/Complexity_test/: complexity.asv  complexity.m
test/DualListDecoder_Test/: dualList.sh  dualList_Test  dualList_test.cpp  output.txt
test/DuoCodec_Test/: duoCodec.asv  duoCodec.m  duoCodec.sh  duoCodec_test  duoCodec_test.cpp  output.txt
test/ListDecoderRanking_Test/: listDecoder_test  listdecoder.sh  listdecoder_test.cpp  output.txt
test/Matlab_decoding_acc_verification/: Homework_3_AWGN.m  Homework_3_BSC.m  Viterbi_Decoder.m  messages.mat
